2-BiasMonitoring/kserve-demo/resources/minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
    - name: minio-client-port
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: minio
---
apiVersion: v1
kind: Deployment
metadata:
  name: minio-deployment # <--- changed this
  labels: # <--- added proper indentation
    app: minio # <--- changed this to match label on the pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio  # <--- changed this to match label on the pod
  template:
    metadata:
      labels:
        app: minio
        maistra.io/expose-route: 'true'
      name: minio
    spec:
      containers:
        - args:
            - server
            - /data1
          image: quay.io/trustyai/modelmesh-minio-examples:latest
          name: minio
