2-BiasMonitoring/kserve-demo/resources/model_storage_container.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
    - name: minio-client-port
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: minio
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: minio
    maistra.io/expose-route: 'true'
  annotations:
    sidecar.istio.io/inject: 'true'
  name: minio
spec:
  containers:
    - args:
        - server
        - /data1
      image: quay.io/trustyai/modelmesh-minio-examples:latest
      name: minio
